--- a/Flow 4 projekt/index.html
+++ b/Flow 4 projekt/index.html
@@ -19,8 +19,8 @@
       </div>
       <nav>
         <a href="index.html">Hjem</a>
-        <a href="try.html">quiz</a>
-        <a href="kontakt.html">kontakt</a>
+        <a href="try.html">Quiz</a>
+        <a href="kontakt.html">Kontakt</a>
 
 
       </nav>
