--- a/Flow 4 projekt/index.html
+++ b/Flow 4 projekt/index.html
@@ -11,7 +11,7 @@
   <body>
 
 
-    <section class="menu">
+    <section class="menu mr-n4">
       <div class="logo">
       <a href="forside.html">
           <img src="images/logo-1.png" alt="logo" style= "height:50px">
@@ -26,23 +26,22 @@
       </nav>
     </section>
 
+    <div class="titel row row-cols justify-content-center mb-3">
+      <h1>M&M Parfume</h1>
+    </div>
 
-
-
-    <section class="ad">
-
+    <section class="ad row row-cols justify-content-center">
   <iframe src="https://doc-0o-10-adspreview.googleusercontent.com/preview/9o5bees06oeguhr10neq55qcti27eh7n/s8bh5hccof0q1s5t0f74lscll2rrlmiu/1576800000000/1626673/previewuser/gwd.1626673?render=blank&creativeId=gwd.1626673&irsk=CICAgKCX4rqNpwE" width="306" height="253.5"></iframe>
+    </section>
 
-
-</section>
-
-<h2>video</h2>
+<div class="row row-cols justify-content-center">
 <iframe  width="500px" height="300px" allowfullscreen
 src="https://www.youtube.com/embed/AgPh76xxZ_U">
 
 </iframe>
+</div>
 
-<section >
+<section>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -51,8 +50,8 @@ src="https://www.youtube.com/embed/AgPh76xxZ_U">
 </section>
 
 
-<div class="footer text-muted text-dark bg-dark d-inline ">
-     <p class="bg-dark text-center text-light mb-n4"><br> Dette er et skoleprojekt lavet af:  <br><br>
+<div class="footer text-muted text-dark bg-dark d-inline">
+     <p class="bg-dark text-center text-light mb-n4 mr-n4"><br> Dette er et skoleprojekt lavet af:  <br><br>
        Monique Wendelboe Lohmann Andersen<br><br> Mia Tess Koreska Sass Kindberg <br><br><br></p>
    </div>
 
