--- a/Flow 4 projekt/try.html
+++ b/Flow 4 projekt/try.html
@@ -11,7 +11,7 @@
   <body>
 
 
-    <section class="menu">
+    <section class="menu mr-n4">
       <div class="logo">
       <a href="forside.html">
           <img src="images/logo-1.png" alt="logo" style= "height:50px">
@@ -19,8 +19,8 @@
       </div>
       <nav>
         <a href="index.html">Hjem</a>
-        <a href="try.html">Quiz</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="try.html">quiz</a>
+        <a href="kontakt.html">kontakt</a>
 
       </nav>
 </section>
@@ -32,10 +32,14 @@
 
 
 
+<div class="row row-cols justify-content-center ">
 <section class="quiz">
   <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
+
+</div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -45,7 +49,7 @@
 
 
 <div class="footer text-muted text-dark bg-dark d-inline ">
-     <p class="bg-dark text-center text-light mb-n4"><br> Dette er et skoleprojekt lavet af:  <br><br>
+     <p class="bg-dark text-center text-light mb-n4 mr-n4"><br> Dette er et skoleprojekt lavet af:  <br><br>
        Monique Wendelboe Lohmann Andersen<br><br> Mia Tess Koreska Sass Kindberg <br><br><br></p>
    </div>
 
