--- a/Flow 4 projekt/try.html
+++ b/Flow 4 projekt/try.html
@@ -25,10 +25,13 @@
       </nav>
 </section>
 
-<section class="navn">
 
+<div class="row row-cols justify-content-center ">
+<section class="navn">
 <img src="images/quiz-1.png" style= "height:400px">
 </section>
+
+</div>
 
 
 
