--- a/Flow 4 projekt/kontakt.html
+++ b/Flow 4 projekt/kontakt.html
@@ -11,7 +11,7 @@
   <body>
 
 
-    <section class="menu">
+    <section class="menu mr-n4">
       <div class="logo">
       <a href="forside.html">
           <img src="images/logo-1.png" alt="logo" style= "height:50px">
@@ -27,7 +27,7 @@
     </section>
 
 
-<section >
+<section class="row row-cols justify-content-center">
   <div id="main">
 <div id="form_sample"></div> <!-- Include JS file here -->
 <script src="form.js"></script>
@@ -42,7 +42,7 @@
 
 
 <div class="footer text-muted text-dark bg-dark d-inline ">
-     <p class="bg-dark text-center text-light mb-n4"><br> Dette er et skoleprojekt lavet af:  <br><br>
+     <p class="bg-dark text-center text-light mb-n4 mr-n4"><br> Dette er et skoleprojekt lavet af:  <br><br>
        Monique Wendelboe Lohmann Andersen<br><br> Mia Tess Koreska Sass Kindberg <br><br><br></p>
    </div>
 
