--- a/Flow 4 projekt/try.html
+++ b/Flow 4 projekt/try.html
@@ -19,12 +19,11 @@
       </div>
       <nav>
         <a href="index.html">Hjem</a>
-        <a href="try.html">Quiz</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="try.html">quiz</a>
+        <a href="kontakt.html">kontakt</a>
 
       </nav>
 </section>
-
 
 <div class="row row-cols justify-content-center ">
 <section class="navn">
